--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "darkaonline/l5-swagger": "^8.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "phpmailer/phpmailer": "^6.5",
+        "tymon/jwt-auth": "*",
+        "zircote/swagger-php": "^4.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
